fixing the overflow property

--- a/app/assets/stylesheets/content/layout.scss
+++ b/app/assets/stylesheets/content/layout.scss
@@ -1,7 +1,7 @@
 .content-page__container {
   font-family: $heiti;
+  overflow: auto;
   @include content-container;
-  overflow: visible;
 }
 
 .content-body__container {
