--- a/app/assets/stylesheets/general/clearfix.scss
+++ b/app/assets/stylesheets/general/clearfix.scss
@@ -1,5 +1,5 @@
 div {
-  overflow: visible;
+  overflow: inherit;
   zoom: 1;
   box-sizing: border-box;
   position: relative;
